--- a/.github/workflows/Shellcheck.yml
+++ b/.github/workflows/Shellcheck.yml
@@ -1,6 +1,8 @@
-workflow "Shellcheck" {
-  on = "push"
-  resolves = [
-    "Shellcheck",
-  ]
-}
+name:  Shellcheck"
+
+on: [push]
+
+jobs:
+  build:
+    steps:
+      - uses: actions/Shellcheck
