--- a/.github/workflows/Shellcheck.yml
+++ b/.github/workflows/Shellcheck.yml
@@ -6,4 +6,4 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/Shellcheck
+      - uses: ludeeus/actions/shellcheck@master
