--- a/.github/workflows/Shellcheck.yml
+++ b/.github/workflows/Shellcheck.yml
@@ -3,7 +3,10 @@ name:  Shellcheck"
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
+shellcheck:
+    name: Shellcheck
+    runs-on: ubuntu-latest
     steps:
-      - uses: ludeeus/actions/shellcheck@master
+    - uses: actions/checkout@master
+    - name: Shellcheck
+      uses: ludeeus/action-shellcheck@master
